Hide navigation description on widescreen to prevent navbar from overflowing

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,6 @@
 $footer-background-color: $grey-darker;
 $modal-background-background-color: rgba($black, .26);
 $radius-large: 0;
-$navbar-breakpoint: $widescreen;
 @import '~bulma/sass/utilities/functions';
 @import '~bulma/sass/utilities/derived-variables';
 @import '~bulma/sass/utilities/functions';
